--- a/QuizClientApp/src/app/theme/layout/admin/org/org.component.html
+++ b/QuizClientApp/src/app/theme/layout/admin/org/org.component.html
@@ -9,44 +9,58 @@
                <!--      <button (click)="goToAbout()">Go to About</button> -->
                 </div>
                 <div class="col-sm-1">
-                    <button type="button" class="btn btn-primary" (click)="goToAbout()" ngbTooltip="Add New Organization">+</button>
+                    <button type="button" class="btn btn-primary" (click)="create()" ngbTooltip="Add New Organization">+</button>
                 </div>
             </div>
             <div class="table-responsive">
-                <table class="table table-hover">
-                    <thead>
-                        <tr>
-                            <th>#</th>
-                            <th>Name</th>
-                            <th>Address</th>
-                            <th>Contact</th>
-                            <th>Action</th>
-                        </tr>
-                    </thead>
+                <table *ngIf="items.length" class="table table-hover">
+                    <thead><tr><th>Id</th><th>Name</th><th>City</th><th>Actions</th></tr></thead>
                     <tbody>
-                        <tr>
-                            <th scope="row">1</th>
-                            <td>Mark</td>
-                            <td>Otto</td>
-                            <td>&#64;mdo</td>
-                            <td><a href="#"> View</a></td>
-                        </tr>
-                        <tr>
-                            <th scope="row">2</th>
-                            <td>Jacob</td>
-                            <td>Thornton</td>
-                            <td>&#64;fat</td>
-                            <td><a href="#"> View</a></td>
-                        </tr>
-                        <tr>
-                            <th scope="row">3</th>
-                            <td>Larry</td>
-                            <td>the Bird</td>
-                            <td>&#64;twitter</td>
-                            <td><a href="#"> View</a></td>
+                        <tr *ngFor="let o of items">
+                            <td>{{ o.organizationId }}</td>
+                            <td>{{ o.orgName }}</td>
+                            <td>{{ o.city }}</td>
+                            <td>
+                                <button (click)="edit(o.organizationId)">Edit</button>
+                                <button (click)="delete(o.organizationId)">Delete</button>
+                            </td>
                         </tr>
                     </tbody>
                 </table>
+                <!--  <table class="table table-hover">
+         <thead>
+             <tr>
+                 <th>#</th>
+                 <th>Name</th>
+                 <th>Address</th>
+                 <th>Contact</th>
+                 <th>Action</th>
+             </tr>
+         </thead>
+         <tbody>
+             <tr>
+                 <th scope="row">1</th>
+                 <td>Mark</td>
+                 <td>Otto</td>
+                 <td>&#64;mdo</td>
+                 <td><a href="#"> View</a></td>
+             </tr>
+             <tr>
+                 <th scope="row">2</th>
+                 <td>Jacob</td>
+                 <td>Thornton</td>
+                 <td>&#64;fat</td>
+                 <td><a href="#"> View</a></td>
+             </tr>
+             <tr>
+                 <th scope="row">3</th>
+                 <td>Larry</td>
+                 <td>the Bird</td>
+                 <td>&#64;twitter</td>
+                 <td><a href="#"> View</a></td>
+             </tr>
+         </tbody>
+     </table> -->
             </div>
         </app-card>
     </div>
