--- a/QuizClientApp/src/app/demo/pages/authentication/sign-in/sign-in.component.html
+++ b/QuizClientApp/src/app/demo/pages/authentication/sign-in/sign-in.component.html
@@ -1,18 +1,20 @@
+
+
 <div class="auth-wrapper">
   <div class="auth-content">
     <div class="card">
       <div class="row align-items-center text-center">
         <div class="col-md-12">
           <div class="card-body">
-            <form>
+            <form (ngSubmit)="login()">
               <!-- <img src="assets/images/logo-dark.png" alt="logo" class="img-fluid mb-4" /> -->
               <h4>Quiz App</h4>
               <h6 class="mb-3 f-w-400">Member Login</h6>
               <div class="input-group mb-3">
-                <input
-                  type="email"
+                <input [(ngModel)]="userName" name="userName"
+                  type="text"
                   class="form-control"
-                  id="floatingInput"
+                
                   [class.is-invalid]="submitted() && loginForm.email().invalid()"
                   placeholder="Email Address"
                   [field]="loginForm.email"
@@ -28,7 +30,7 @@
               <div class="input-group mb-4">
                 @if (!showPassword()) {
                   <input
-                    type="password"
+                    type="password" [(ngModel)]="password" name="password"
                     id="password"
                     class="form-control"
                     [field]="loginForm.password"
@@ -37,7 +39,7 @@
                   />
                 } @else {
                   <input
-                    type="text"
+                    type="text" [(ngModel)]="password" name="password"
                     id="password"
                     class="form-control"
                     [field]="loginForm.password"
@@ -60,17 +62,11 @@
                 </div>
               </div>
               <div class="d-grid">
-                  <button class="btn btn-block btn-primary mb-4" (click)="goToDash()">Signin</button>
+                  <button type="submit" class="btn btn-block btn-primary mb-4">Signin</button>
               </div>
-            <!--   <p class="mb-2 text-muted">
-                Forgot password?
-                <a href="#" class="f-w-400">Reset</a>
-              </p> -->
+         
             </form>
-            <!-- <p class="mb-0 text-muted">
-              Don’t have an account?
-              <a [routerLink]="['/register']" class="f-w-400">Signup</a>
-            </p> -->
+          
           </div>
         </div>
       </div>
