--- a/QuizClientApp/src/app/theme/layout/admin/org/create/create.component.html
+++ b/QuizClientApp/src/app/theme/layout/admin/org/create/create.component.html
@@ -6,43 +6,44 @@
             <hr />
             <div class="row">
                 <div class="col-md-6">
-                    <form action="javascript:">
+                    <form action="javascript:" [formGroup]="form" (ngSubmit)="submit()">
                         <div class="form-group">
                             <label for="exampleInputEmail1">Reg. No</label>
-                            <input type="email" class="form-control" id="regno" aria-describedby="emailHelp" placeholder="Registration No" />
+                            <input type="number" class="form-control" id="regno" placeholder="Registration No" formControlName="regNo" />
                             <!-- <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
                         </div>
                         <div class="form-group">
                             <label>Organization Name</label>
-                            <input type="text" class="form-control" placeholder="Organization Name" />
+                            <input type="text" class="form-control" placeholder="Organization Name" formControlName="orgName" />
                         </div>
                         <div class="form-group">
                             <label>Address</label>
-                            <textarea class="form-control" id="exampleFormControlTextarea1" rows="1"></textarea>
+                            <textarea class="form-control" id="exampleFormControlTextarea1" rows="1" formControlName="address"></textarea>
                         </div>
                         <div class="form-group">
                             <label for="exampleFormControlSelect1">State</label>
-                            <select class="form-control" id="exampleFormControlSelect1">
-                                <option>State 1</option>
-                                <option>State 2</option>
-                                <option>State 3</option>
-                                <option>State 4</option>
-                                <option>State 5</option>
-                            </select>
+                            <!-- <select class="form-control" id="exampleFormControlSelect1" formControlName="address">
+        <option>State 1</option>
+        <option>State 2</option>
+        <option>State 3</option>
+        <option>State 4</option>
+        <option>State 5</option>
+    </select> -->
+                            <input type="text" class="form-control" placeholder="State" formControlName="state" />
                         </div>
                         <div class="form-group">
                             <label>Contact Number</label>
-                            <input type="number" class="form-control" placeholder="Contact Number" />
+                            <input type="number" class="form-control" placeholder="Contact Number" formControlName="contactNo" />
                         </div>
 
                         <div class="form-group">
                             <label>User Name</label>
-                            <input type="text" class="form-control" placeholder="Username" />
+                            <input type="text" class="form-control" placeholder="Username" formControlName="address" />
                         </div>
                         <!--    <div class="form-group form-check">
-                    <input type="checkbox" class="form-check-input" id="exampleCheck1" />
-                    <label class="form-check-label" for="exampleCheck1">Check me out</label>
-                </div> -->
+        <input type="checkbox" class="form-check-input" id="exampleCheck1" />
+        <label class="form-check-label" for="exampleCheck1">Check me out</label>
+    </div> -->
                         <button type="submit" class="btn btn-primary">Submit</button>
                     </form>
                 </div>
@@ -50,35 +51,36 @@
                     <form action="javascript:">
                         <div class="form-group">
                             <label for="exampleInputPassword1">Re. Date</label>
-                            <input type="date" class="form-control" id="regDate" placeholder="RegDate" />
+                            <input type="date" class="form-control" id="regDate" placeholder="Registration Date" formControlName="regDate" />
 
                         </div>
                         <div class="form-group">
                             <label>Contact Person</label>
-                            <input type="text" class="form-control" placeholder="Contact Person" />
+                            <input type="text" class="form-control" placeholder="Contact Person" formControlName="contactPersonFname" />
                         </div>
                         <div class="form-group">
                             <label for="exampleFormControlSelect1">City</label>
-                            <select class="form-control" id="exampleFormControlSelect1">
-                                <option>City 1</option>
-                                <option>City 2</option>
-                                <option>City 3</option>
-                                <option>City 4</option>
-                                <option>City 5</option>
-                            </select>
+                            <!-- <select class="form-control" id="exampleFormControlSelect1">
+        <option>City 1</option>
+        <option>City 2</option>
+        <option>City 3</option>
+        <option>City 4</option>
+        <option>City 5</option>
+    </select> -->
+                            <input type="text" class="form-control" placeholder="City" formControlName="city" />
                         </div>
                         <div class="form-group">
                             <label for="exampleInputEmail1">Email address</label>
-                            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email" />
+                            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email" formControlName="email" />
                             <!--   <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
                         </div>
                         <div class="form-group">
                             <label>Alternet Number</label>
-                            <input type="number" class="form-control" placeholder="Alternet Number" />
+                            <input type="number" class="form-control" placeholder="Alternet Number" formControlName="alterNetNo" />
                         </div>
                         <div class="form-group">
                             <label for="exampleInputPassword1">Password</label>
-                            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" />
+                            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" formControlName="address" />
                         </div>
                     </form>
                 </div>
