--- a/QuizClientApp/src/app/app.component.html
+++ b/QuizClientApp/src/app/app.component.html
@@ -1,5 +1,15 @@
-<router-outlet>
+<!-- <router-outlet>
   <app-spinner />
-</router-outlet>
+</router-outlet> -->
+
+<header><!-- header markup --></header>
+<aside><!-- sidebar markup --></aside>
+
+<main class="content">
+    <!-- child routes (analytics, subject, organization, etc.) render here -->
+    <router-outlet></router-outlet>
+</main>
+
+<footer><!-- footer markup --></footer>
 
 
