--- a/QuizClientApp/src/app/demo/pages/authentication/sign-in/sign-in.component.html
+++ b/QuizClientApp/src/app/demo/pages/authentication/sign-in/sign-in.component.html
@@ -16,7 +16,7 @@
                   class="form-control"
                 
                   [class.is-invalid]="submitted() && loginForm.email().invalid()"
-                  placeholder="Email Address"
+                  placeholder="Username"
                   [field]="loginForm.email"
                 />
                 @if (submitted() && loginForm.email().invalid()) {
