--- a/QuizClientApp/src/app/theme/layout/admin/org/create/create.component.html
+++ b/QuizClientApp/src/app/theme/layout/admin/org/create/create.component.html
@@ -4,12 +4,14 @@
             <!--  <h5>Form controls</h5> -->
             <small id="emailHelp" class="form-text text-muted">Please fill all details carefully.</small>
             <hr />
-            <div class="row">
-                <div class="col-md-6">
-                    <form action="javascript:" [formGroup]="form" (ngSubmit)="submit()">
+            <form  [formGroup]="form" (ngSubmit)="submit()">
+                <div class="row">
+
+                    <div class="col-md-6">
+
                         <div class="form-group">
                             <label for="exampleInputEmail1">Reg. No</label>
-                            <input type="number" class="form-control" id="regno" placeholder="Registration No" formControlName="regNo" />
+                            <input type="text" class="form-control" placeholder="Registration No" formControlName="regNo" />
                             <!-- <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
                         </div>
                         <div class="form-group">
@@ -18,17 +20,17 @@
                         </div>
                         <div class="form-group">
                             <label>Address</label>
-                            <textarea class="form-control" id="exampleFormControlTextarea1" rows="1" formControlName="address"></textarea>
+                            <textarea class="form-control" rows="1" formControlName="address"></textarea>
                         </div>
                         <div class="form-group">
                             <label for="exampleFormControlSelect1">State</label>
                             <!-- <select class="form-control" id="exampleFormControlSelect1" formControlName="address">
-        <option>State 1</option>
-        <option>State 2</option>
-        <option>State 3</option>
-        <option>State 4</option>
-        <option>State 5</option>
-    </select> -->
+            <option>State 1</option>
+            <option>State 2</option>
+            <option>State 3</option>
+            <option>State 4</option>
+            <option>State 5</option>
+        </select> -->
                             <input type="text" class="form-control" placeholder="State" formControlName="state" />
                         </div>
                         <div class="form-group">
@@ -36,22 +38,22 @@
                             <input type="number" class="form-control" placeholder="Contact Number" formControlName="contactNo" />
                         </div>
 
-                        <div class="form-group">
-                            <label>User Name</label>
-                            <input type="text" class="form-control" placeholder="Username" formControlName="address" />
-                        </div>
+                        <!-- <div class="form-group">
+        <label>User Name</label>
+        <input type="text" class="form-control" placeholder="Username" formControlName="address" />
+    </div> -->
                         <!--    <div class="form-group form-check">
         <input type="checkbox" class="form-check-input" id="exampleCheck1" />
         <label class="form-check-label" for="exampleCheck1">Check me out</label>
     </div> -->
-                        <button type="submit" class="btn btn-primary">Submit</button>
-                    </form>
-                </div>
-                <div class="col-md-6">
-                    <form action="javascript:">
+                        <button type="submit" class="btn btn-primary">Submit</button> &nbsp;
+                        <button type="button" class="btn btn-primary" (click)="back()" ngbTooltip="Add New Organization">Back</button>
+                    </div>
+                    <div class="col-md-6">
+
                         <div class="form-group">
                             <label for="exampleInputPassword1">Re. Date</label>
-                            <input type="date" class="form-control" id="regDate" placeholder="Registration Date" formControlName="regDate" />
+                            <input type="date" class="form-control" placeholder="Registration Date" formControlName="regDate" />
 
                         </div>
                         <div class="form-group">
@@ -61,30 +63,33 @@
                         <div class="form-group">
                             <label for="exampleFormControlSelect1">City</label>
                             <!-- <select class="form-control" id="exampleFormControlSelect1">
-        <option>City 1</option>
-        <option>City 2</option>
-        <option>City 3</option>
-        <option>City 4</option>
-        <option>City 5</option>
-    </select> -->
+                    <option>City 1</option>
+                    <option>City 2</option>
+                    <option>City 3</option>
+                    <option>City 4</option>
+                    <option>City 5</option>
+                </select> -->
                             <input type="text" class="form-control" placeholder="City" formControlName="city" />
                         </div>
                         <div class="form-group">
                             <label for="exampleInputEmail1">Email address</label>
-                            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email" formControlName="email" />
+                            <input type="email" class="form-control" placeholder="Enter email" formControlName="email" />
                             <!--   <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
                         </div>
                         <div class="form-group">
                             <label>Alternet Number</label>
                             <input type="number" class="form-control" placeholder="Alternet Number" formControlName="alterNetNo" />
                         </div>
-                        <div class="form-group">
-                            <label for="exampleInputPassword1">Password</label>
-                            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" formControlName="address" />
-                        </div>
-                    </form>
+                        <!--    <div class="form-group">
+                <label for="exampleInputPassword1">Password</label>
+                <input type="password" class="form-control"  placeholder="Password" formControlName="address" />
+            </div> -->
+
+                    </div>
+
+
                 </div>
-            </div>
+            </form>
             
           
         </app-card>
