--- a/QuizClientApp/src/app/theme/layout/admin/subject/create/create.component.html
+++ b/QuizClientApp/src/app/theme/layout/admin/subject/create/create.component.html
@@ -1,1 +1,15 @@
-<p>create works!</p>
+<div class="subject-form">
+    <h3>Create Subject</h3>
+    <form [formGroup]="form" (ngSubmit)="submit()">
+        <div class="mb-3">
+            <label class="form-label">Name</label>
+            <input class="form-control" formControlName="subName" />
+            <div *ngIf="form.controls['subName'].invalid && form.controls['subName'].touched" class="text-danger">
+                Name is required.
+            </div>
+        </div>
+
+        <button class="btn btn-primary" type="submit" [disabled]="form.invalid || submitting">Create</button>
+        <button class="btn btn-secondary ms-2" type="button" (click)="cancel()">Cancel</button>
+    </form>
+</div>
