--- a/QuizClientApp/src/app/theme/layout/admin/subject/subject.component.html
+++ b/QuizClientApp/src/app/theme/layout/admin/subject/subject.component.html
@@ -9,44 +9,38 @@
                   <!--   <button (click)="goToAbout()">Go to About</button> -->
                 </div>
                 <div class="col-sm-1">
-                    <button type="button" class="btn btn-primary" routerLink="/addorganization" ngbTooltip="Add New Organization">+</button>
+                    <button type="button" class="btn btn-primary" (click)="create()" ngbTooltip="Add Subject">+</button>
+                 <!--    <button class="btn btn-primary" (click)="create()">Add Subject</button> -->
+
                 </div>
             </div>
             <div class="table-responsive">
+                <div *ngIf="loading" class="mb-2">Loading...</div>
+                <div *ngIf="error" class="text-danger mb-2">{{ error }}</div>
+
                 <table class="table table-hover">
                     <thead>
                         <tr>
-                            <th>#</th>
+                            <th style="width:80px">Id</th>
                             <th>Name</th>
-                            <th>Address</th>
-                            <th>Contact</th>
-                            <th>Action</th>
+                            <th style="width:180px">Actions</th>
+
                         </tr>
                     </thead>
                     <tbody>
-                        <tr>
-                            <th scope="row">1</th>
-                            <td>Mark</td>
-                            <td>Otto</td>
-                            <td>&#64;mdo</td>
-                            <td><a href="#"> View</a></td>
+                        <tr *ngFor="let s of items">
+                            <td>{{ s.subId }}</td>
+                            <td>{{ s.subName }}</td>
+                            <td>
+                                <button class="btn btn-sm btn-outline-primary me-2" (click)="edit(s.subId)">Edit</button>
+                                <button class="btn btn-sm btn-outline-danger" (click)="delete(s.subId)">Delete</button>
+                            </td>
                         </tr>
-                        <tr>
-                            <th scope="row">2</th>
-                            <td>Jacob</td>
-                            <td>Thornton</td>
-                            <td>&#64;fat</td>
-                            <td><a href="#"> View</a></td>
-                        </tr>
-                        <tr>
-                            <th scope="row">3</th>
-                            <td>Larry</td>
-                            <td>the Bird</td>
-                            <td>&#64;twitter</td>
-                            <td><a href="#"> View</a></td>
-                        </tr>
+
                     </tbody>
                 </table>
+                <div *ngIf="!loading && (!items || items.length === 0)" class="mt-3">No subjects found.</div>
+
             </div>
         </app-card>
     </div>
