--- a/QuizClientApp/src/app/theme/layout/admin/admin.component.html
+++ b/QuizClientApp/src/app/theme/layout/admin/admin.component.html
@@ -10,12 +10,9 @@
              (NavCollapse)="this.navCollapsed = !this.navCollapsed"
              (NavCollapsedMob)="navMobClick()"></app-nav-bar>
 
+             
 
-
-<!--  
-   
-
-       --><div class="pcoded-main-container">
+<div class="pcoded-main-container">
     <div class="pcoded-wrapper">
         <div class="pcoded-content">
             <div class="pcoded-inner-content">
@@ -29,11 +26,11 @@
         </div>
     </div>
 </div>
-    <!--
+<!--
 
 
-      <div class="pc-menu-overlay" (click)="closeMenu()" (keydown)="handleKeyDown($event)" tabindex="0"></div>
-     -->
-    <!-- <app-footer [ngClass]="{
-        'navbar-collapsed': navCollapsed
-      }" /> -->
+  <div class="pc-menu-overlay" (click)="closeMenu()" (keydown)="handleKeyDown($event)" tabindex="0"></div>
+ -->
+<!-- <app-footer [ngClass]="{
+    'navbar-collapsed': navCollapsed
+  }" /> -->
