--- a/QuizClientApp/src/app/theme/layout/admin/nav-bar/nav-right/nav-right.component.html
+++ b/QuizClientApp/src/app/theme/layout/admin/nav-bar/nav-right/nav-right.component.html
@@ -1,5 +1,5 @@
 <ul class="navbar-nav ms-auto">
- <!--  <li>
+  <li>
     <div class="dropdown" ngbDropdown placement="auto">
       <a ngbDropdownToggle href="javascript:">
         <i class="icon feather icon-bell" title="Notification"></i>
@@ -19,16 +19,16 @@
           </li>
           <li class="notification">
             <div class="media">
-              <img class="img-radius" src="assets/images/user/avatar-1.jpg" alt="Generic placeholder image" />
+              <img class="img-radius" src="assets/images/user/dumy.png" alt="Generic placeholder image" />
               <div class="media-body">
                 <p>
-                  <strong>John Doe</strong>
+                  <strong>Mr. Abc</strong>
                   <span class="n-time text-muted">
                     <i class="icon feather icon-clock m-r-10"></i>
                     30 min
                   </span>
                 </p>
-                <p>New ticket Added</p>
+                <p>New Event details</p>
               </div>
             </div>
           </li>
@@ -37,25 +37,25 @@
           </li>
           <li class="notification">
             <div class="media">
-              <img class="img-radius" src="assets/images/user/avatar-2.jpg" alt="Generic placeholder image" />
+                <img class="img-radius" src="assets/images/user/dumy.png" alt="Generic placeholder image" />
               <div class="media-body">
                 <p>
-                  <strong>Joseph William</strong>
+                  <strong>Mr. XYZ</strong>
                   <span class="n-time text-muted">
                     <i class="icon feather icon-clock m-r-10"></i>
                     30 min
                   </span>
                 </p>
-                <p>Purchase New Theme and make payment</p>
+                <p>Generate new event</p>
               </div>
             </div>
           </li>
           <li class="notification">
             <div class="media">
-              <img class="img-radius" src="assets/images/user/avatar-3.jpg" alt="Generic placeholder image" />
+                <img class="img-radius" src="assets/images/user/dumy.png" alt="Generic placeholder image" />
               <div class="media-body">
                 <p>
-                  <strong>Sara Soudein</strong>
+                  <strong>Mr. Org</strong>
                   <span class="n-time text-muted">
                     <i class="icon feather icon-clock m-r-10"></i>
                     30 min
@@ -71,7 +71,7 @@
         </div>
       </div>
     </div>
-  </li> -->
+  </li>
   <!-- <li (click)="this.visibleUserList = !this.visibleUserList">
     <div class="dropdown">
       <a href="javascript:" class="displayChatbox dropdown-toggle">
@@ -83,7 +83,7 @@
   <li>
     <div class="dropdown drp-user" ngbDropdown placement="auto">
       <a href="javascript:" ngbDropdownToggle>
-        <img src="assets/images/user/avatar-1.jpg" class="img-radius wid-40" alt="User-Profile-Image" />
+          <img src="assets/images/user/dumy.png" class="img-radius wid-40" alt="User-Profile-Image" />
       </a>
       <div class="dropdown-menu dropdown-menu-end profile-notification" ngbDropdownMenu>
         <div class="pro-head">
