--- a/QuizClientApp/src/app/theme/layout/admin/subject/create/create.component.html
+++ b/QuizClientApp/src/app/theme/layout/admin/subject/create/create.component.html
@@ -6,7 +6,7 @@
             <hr />
 
             <div class="subject-form">
-                <h3>Create Subject</h3>
+             <!--    <h3>Create Subject</h3> -->
                 <form [formGroup]="form" (ngSubmit)="submit()">
                     <div class="mb-3">
                         <label class="form-label">Name</label>
